<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingHorizontal="@dimen/dp_16"
            android:src="@drawable/ic_home" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/videoView_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <include layout="@layout/layout_video_view" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_share_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        app:layout_constraintTop_toBottomOf="@id/videoView_card">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@+id/textView5"
            android:background="@color/dialog_view_line"
            android:contentDescription="@null" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toEndOf="@+id/textView5"
            android:background="@color/dialog_view_line"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/share_to"
            android:textColor="@color/text_headline_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/layoutShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_share_to">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/item_share_other" />

            <com.tech.slideshow.customviews.ShareView
                android:id="@+id/btnYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shareIcon="@drawable/ic_youtube"
                app:shareName="@string/share_youtube" />

            <com.tech.slideshow.customviews.ShareView
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shareIcon="@drawable/ic_facebook"
                app:shareName="@string/share_facebook" />

            <com.tech.slideshow.customviews.ShareView
                android:id="@+id/btnMessenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shareIcon="@drawable/ic_messenger"
                app:shareName="@string/share_messenger" />

            <com.tech.slideshow.customviews.ShareView
                android:id="@+id/btnInstagram"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                app:shareIcon="@drawable/ic_instagram"
                app:shareName="@string/share_instagram" />

            <com.tech.slideshow.customviews.ShareView
                android:id="@+id/btnGmail"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shareIcon="@drawable/ic_gmail"
                app:shareName="@string/share_gmail" />

            <com.tech.slideshow.customviews.ShareView
                android:id="@+id/btnWhatsApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:shareIcon="@drawable/ic_whatsapp"
                app:shareName="@string/share_whatsapp" />

        </LinearLayout>
    </HorizontalScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/ads_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#f2f2f2"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutShare">

        <include layout="@layout/ad_container_big_8" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
