<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/shape_round_rect_dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/FontSemiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="start"
        android:text="@string/str_action_rename"
        android:textAlignment="viewStart"
        android:textColor="@color/text_headline_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        style="@style/FontMedium"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_bg_edit_text"
        android:gravity="left|center_vertical|center_horizontal|center|start"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="40dp"
        android:textAlignment="viewStart"
        android:textColor="@color/text_headline_color"
        android:textColorHighlight="@color/colorAccent"
        android:textColorHint="#8089909c"
        android:textCursorDrawable="@drawable/shape_cursor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_clear"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/actionBarItemBackground"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintTop_toTopOf="@+id/et_name"
        app:srcCompat="@drawable/ic_more_delete" />

    <LinearLayout
        android:id="@+id/ll_error_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:tint="#e02020"
            app:srcCompat="@drawable/ic_home_failure" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_tip"
            style="@style/FontMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="start"
            android:text="@string/already_in_use"
            android:textAlignment="viewStart"
            android:textColor="#e02020"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bt_negative"
        style="@style/FontSemiBold"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_btn_negative"
        android:gravity="center"
        android:text="@string/str_action_cancel"
        android:textColor="@color/bg_cancel_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_bt_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_error_tip"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bt_positive"
        style="@style/FontSemiBold"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_positive"
        android:gravity="center"
        android:text="@string/str_action_ok"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bt_negative"
        app:layout_constraintTop_toTopOf="@+id/tv_bt_negative"
        app:textAllCaps="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bt_negative" />
</androidx.constraintlayout.widget.ConstraintLayout>
