<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/shape_round_rect_dialog_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="24dp">



        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_settings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/dialog_permission_required_title"
            android:textColor="@color/text_headline_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sub"
            style="@style/TextViewFont_PopMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:gravity="start"
            android:text="@string/storage_to_create_videos"
            android:textColor="@color/text_sub_title_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/cl_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_desc"
                style="@style/TextViewFont_PopMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="start"
                android:text="@string/turn_on_permission_guide"
                android:textColor="@color/colorNormalText"
                android:textSize="13sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/bg_11_guide"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_permission_allow_bg"
                app:layout_constraintBottom_toBottomOf="@+id/tv_11_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_11_guide" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_11_guide"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"

                android:text="@string/turn_on_permission_guide"
                android:textColor="@color/text_headline_color"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_11_guide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/iv_11_guide"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_11_guide"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_11_guide"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_finger" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/android_11_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="tv_11_guide,iv_11_guide,bg_11_guide" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_positive"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/str_go_settings"
            android:textAllCaps="true"
            android:textColor="@color/colorAccentTint"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
